# QualityAssurance

./: CMakeLists.txt  QualityAssurance.xcf  README.md  module_name.cfg.EXAMPLE
QualityAssurance/: CMakeLists.txt  QualityAssurance.py  database.cfg.EXAMPLE  qualityassurance.cfg.EXAMPLE
QualityAssurance/QALib/: #__init__.py#  .#__init__.py  QAModule.py
QualityAssurance/QualityAssuranceLib/: QAUtil.py
QualityAssurance/Resources/: __init__.py  derived_images.py
QualityAssuranceLib/: QAModule.py  __init__.py
Resources/: derived_images.py
